FIXED:Swagger authorization issue fixed.
